# src/routes/images.js
@@ -3,6 +3,6 @@ import imageControlller from "../controllers/imageController";
 
 const router = express();
 
-router.get("/search/:category", imageControlller.search);
+router.get("/search/:image", imageControlller.search);
 
 export default router;
